Added endpoints to get the swagger doc and current settings. Added a method in validator to read in and return the swagger doc.
