# jobber/api/swagger/swagger-spec.yaml
@@ -246,6 +246,38 @@ definitions:
       message:
         type: string
 paths:
+  /:
+    get:
+      summary: Return swagger API specification
+      description: |
+        Returns the jobber API spec as a json swagger doc.
+      tags:
+        - Meta
+      responses:
+        '200':
+          description: The jobber API spec as a json swagger doc.
+          schema:
+            type: string
+        '500':
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+  /settings:
+    get:
+      summary: Return current settings
+      description: |
+        Returns the current jobber settings as a json dictionary.
+      tags:
+        - Meta
+      responses:
+        '200':
+          description: The current settings as a json object.
+          schema:
+            type: string
+        '500':
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
   /jobs:
     get:
       summary: List scheduled jobs
